--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./public/css/style.css -o ./dist/output.css --watch",
+    "tailwind-build": "npx tailwindcss -i ./public/css/style.css -o ./dist/output.css --watch",
     "start": "nodemon server.js"
   },
   "keywords": [],
