--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind-build": "npx tailwindcss -i ./public/css/style.css -o ./dist/output.css --watch",
+    "build": "yarn tailwindcss -i ./public/css/style.css -o ./dist/output.css",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "tailwind-dev": "yarn tailwindcss -i ./public/css/style.css -o ./dist/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "daisyui": "^4.4.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
-    "daisyui": "^4.0.5",
     "nodemon": "^3.0.1"
   }
 }
