--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "fe-lifeplan",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "yarn tailwindcss -i ./public/css/style.css -o ./dist/output.css",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "tailwind-dev": "yarn tailwindcss -i ./public/css/style.css -o ./dist/output.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "daisyui": "^4.4.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.1",
     "tailwindcss": "^3.3.5",
     "yarn": "^1.22.21"
   },
